--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Dex Saves</title>
 	<link rel="shortcut icon" href="images/D20Logo.png" type="image/x-icon">
-	<link rel="stylesheet" href="/Entregas/DexSaves/css/style.css">
+	<link rel="stylesheet" href="./css/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Raleway:wght@100&display=swap"
@@ -28,21 +28,21 @@
 	<nav class="nav__grid">
 
 			<ul class="list">
-				<li><a href="/Entregas/DexSaves/index.html">Home</a> </li>
-				<li><a href="/Entregas/DexSaves/pag/Manuales.html">Manuales</a>
+				<li><a href="index.html">Home</a> </li>
+				<li><a href="./pag/Manuales.html">Manuales</a>
 					<ul>
 						<li><a href=""> Dungeons and Dragons</a></li>
 						<li><a href=""> Call of Cthulhu</a></li>
 					</ul>
 				</li>
-				<li><a href="/Entregas/DexSaves/pag/Dados.html">Dados</a>
+				<li><a href="./pag/Dados.html">Dados</a>
 					<ul>
 						<li><a href="#">Metálicos</a></li>
 						<li><a href="#">Plásticos</a></li>
 						<li><a href="#">Especiales</a></li>
 					</ul>
 				</li>
-				<li><a href="/Entregas/DexSaves/pag/Minis.html">Miniaturas</a>
+				<li><a href="./pag/Minis.html">Miniaturas</a>
 					<ul>
 						<li>
 						<li><a href=""> Pintadas</a></li>
@@ -50,7 +50,7 @@
 				<li><a href=""> Sin Pintar</a></li>
 			</ul>
 			</li>
-			<li><a href="/Entregas/DexSaves/pag/Contacto.html">Contáctanos</a></li>
+			<li><a href="./pag/Contacto.html">Contáctanos</a></li>
 			</ul>
 
 	</nav>
