--- a/pag/Contacto.html
+++ b/pag/Contacto.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Dex Saves</title>
 	<link rel="shortcut icon" href="images/D20Logo.png" type="image/x-icon">
-	<link rel="stylesheet" href="/Entregas/DexSaves/css/contacto.css">
+	<link rel="stylesheet" href="../css/contacto.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Raleway:wght@100&display=swap"
@@ -18,7 +18,7 @@
 <body>
 	<!-- Layout con Grid -->
 	<header>
-		<img src="/Entregas/DexSaves/images/D20Logo.png" alt="DexSavesLogo">
+		<img src="../images/D20Logo.png" alt="DexSavesLogo">
 		<div class="header__title__container">
 			<h1 class="header__title">Dex Saving Throws</h1>
 			<h3 class="header__subtitle">Todo en Juegos de Rol</h3>
@@ -27,21 +27,21 @@
 	<nav class="nav__grid">
 
 		<ul class="list">
-			<li><a href="/Entregas/DexSaves/index.html">Home</a> </li>
-			<li><a href="/Entregas/DexSaves/pag/Manuales.html">Manuales</a>
+			<li><a href="../index.html">Home</a> </li>
+			<li><a href="../pag/Manuales.html">Manuales</a>
 				<ul>
 					<li><a href=""> Dungeons and Dragons</a></li>
 					<li><a href=""> Call of Cthulhu</a></li>
 				</ul>
 			</li>
-			<li><a href="/Entregas/DexSaves/pag/Dados.html">Dados</a>
+			<li><a href="../pag/Dados.html">Dados</a>
 				<ul>
 					<li><a href="#">Metálicos</a></li>
 					<li><a href="#">Plásticos</a></li>
 					<li><a href="#">Especiales</a></li>
 				</ul>
 			</li>
-			<li><a href="/Entregas/DexSaves/pag/Minis.html">Miniaturas</a>
+			<li><a href="../pag/Minis.html">Miniaturas</a>
 				<ul>
 					<li>
 					<li><a href=""> Pintadas</a></li>
@@ -49,7 +49,7 @@
 			<li><a href=""> Sin Pintar</a></li>
 		</ul>
 		</li>
-		<li><a href="/Entregas/DexSaves/pag/Contacto.html">Contáctanos</a></li>
+		<li><a href="../pag/Contacto.html">Contáctanos</a></li>
 		</ul>
 
 </nav>
@@ -62,17 +62,17 @@
 				<p>Estamos para servirte en las siguientes redes:</p>
 			</div>
 			<div class="redes">
-				<div><a href="https://es-la.facebook.com/" target="_blank"><img src="/Entregas/DexSaves/images/FacebookWhite.jpg"
+				<div><a href="https://es-la.facebook.com/" target="_blank"><img src="../images/FacebookWhite.jpg"
 							width="30px" height="30px" alt="Nuestro Facebook"></a>
 					Facebook</div>
-				<div><a href="https://www.instagram.com/" target="_blank"><img src="/Entregas/DexSaves/images/InstagramWhite.png"
+				<div><a href="https://www.instagram.com/" target="_blank"><img src="../images/InstagramWhite.png"
 							alt="Nuestro Instagram" width="30px" height="30px"></a>
 					Instagram</div>
 				<div><a style="text-decoration: none;" href="https://www.twitter.com/" target="_blank"><img
-							src="/Entregas/DexSaves/images/TwitterWhite.png" alt="Nuestro Twitter" width="30px" height="30px"></a>
+							src="../images/TwitterWhite.png" alt="Nuestro Twitter" width="30px" height="30px"></a>
 					Twitter</div>
 				<div><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img
-							src="/Entregas/DexSaves/images/YoutubeWhite.png" alt="El Mejor Video de la Historia" width="31px"
+							src="../images/YoutubeWhite.png" alt="El Mejor Video de la Historia" width="31px"
 							height="31px"></a> YouTube</div>
 			</div>
 		</div>
@@ -103,13 +103,13 @@
 	<footer class="new_footer">
 		<div>
 			<a style="text-decoration: none;" href="https://es-la.facebook.com/" target="_blank"><img
-					src="/Entregas/DexSaves/images/FacebookWhite.jpg" width="30px" height="30px" alt="Nuestro Facebook">
+					src="../images/FacebookWhite.jpg" width="30px" height="30px" alt="Nuestro Facebook">
 				<a style="text-decoration: none;" href="https://www.instagram.com/" target="_blank"><img
-						src="/Entregas/DexSaves/images/InstagramWhite.png" alt="Nuestro Instagram" width="30px" height="30px">
+						src="../images/InstagramWhite.png" alt="Nuestro Instagram" width="30px" height="30px">
 					<a style="text-decoration: none;" href="https://www.twitter.com/" target="_blank"><img
-							src="/Entregas/DexSaves/images/TwitterWhite.png" alt="Nuestro Twitter" width="30px" height="30px">
+							src="../images/TwitterWhite.png" alt="Nuestro Twitter" width="30px" height="30px">
 						<a style="text-decoration: none;" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
-							target="_blank"><img src="/Entregas/DexSaves/images/YoutubeWhite.png" alt="El Mejor Video de la Historia"
+							target="_blank"><img src="../images/YoutubeWhite.png" alt="El Mejor Video de la Historia"
 								width="31px" height="31px">
 						</a>
 		</div>
