--- a/pag/Dados.html
+++ b/pag/Dados.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Dex Saves</title>
 	<link rel="shortcut icon" href="images/D20Logo.png" type="image/x-icon">
-	<link rel="stylesheet" href="/Entregas/DexSaves/css/shop.css">
+	<link rel="stylesheet" href="../css/shop.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Raleway:wght@100&display=swap"
@@ -18,7 +18,7 @@
 <body>
 	<!-- Layout con Grid -->
 	<header>
-		<img src="/Entregas/DexSaves/images/D20Logo.png" alt="DexSavesLogo">
+		<img src="../images/D20Logo.png" alt="DexSavesLogo">
 		<div class="header__title__container">
 			<h1 class="header__title">Dex Saving Throws</h1>
 			<h3 class="header__subtitle">Todo en Juegos de Rol</h3>
@@ -27,21 +27,21 @@
 	<nav class="nav__grid">
 
 		<ul class="list">
-			<li><a href="/Entregas/DexSaves/index.html">Home</a> </li>
-			<li><a href="/Entregas/DexSaves/pag/Manuales.html">Manuales</a>
+			<li><a href="../index.html">Home</a> </li>
+			<li><a href="Manuales.html">Manuales</a>
 				<ul>
 					<li><a href=""> Dungeons and Dragons</a></li>
 					<li><a href=""> Call of Cthulhu</a></li>
 				</ul>
 			</li>
-			<li><a href="/Entregas/DexSaves/pag/Dados.html">Dados</a>
+			<li><a href="Dados.html">Dados</a>
 				<ul>
 					<li><a href="#">Metálicos</a></li>
 					<li><a href="#">Plásticos</a></li>
 					<li><a href="#">Especiales</a></li>
 				</ul>
 			</li>
-			<li><a href="/Entregas/DexSaves/pag/Minis.html">Miniaturas</a>
+			<li><a href="Minis.html">Miniaturas</a>
 				<ul>
 					<li>
 					<li><a href=""> Pintadas</a></li>
@@ -49,7 +49,7 @@
 			<li><a href=""> Sin Pintar</a></li>
 		</ul>
 		</li>
-		<li><a href="/Entregas/DexSaves/pag/Contacto.html">Contáctanos</a></li>
+		<li><a href="Contacto.html">Contáctanos</a></li>
 		</ul>
 
 </nav>
@@ -69,21 +69,21 @@
 		</div>
 	</section>
 	<section class="item1">
-		<img src="/Entregas/DexSaves/images/MetallicDice.jpg" width="300" height="300" alt="D20 Metallic Set">
+		<img src="../images/MetallicDice.jpg" width="300" height="300" alt="D20 Metallic Set">
 		<div class="item__desc">
 			<h5>Set D20 Metalicos 3300$</h5>
 			<input type="button" value="Comprar">
 		</div>
 	</section>
 	<section class="item2">
-		<img src="/Entregas/DexSaves/images/GreenMarmolDice.jpg" width="300" height="300" alt="SetGreenMarmol">
+		<img src="../images/GreenMarmolDice.jpg" width="300" height="300" alt="SetGreenMarmol">
 		<div class="item__desc">
 			<h5>Green Marmol Dice 1300$</h5>
 			<input type="button" value="Comprar">
 		</div>
 	</section>
 	<section class="item3">
-		<img src="/Entregas/DexSaves/images/PurpleMarmolDice.jpg" width="300" height="300" alt="SetPurpleMarmol">
+		<img src="../images/PurpleMarmolDice.jpg" width="300" height="300" alt="SetPurpleMarmol">
 		<div class="item__desc">
 			<h5>Purple Marmol Dice 1300$</h5>
 			<input type="button" value="Comprar">
@@ -91,36 +91,36 @@
 	</section>
 	</section>
 	<section class="item4">
-		<img src="/Entregas/DexSaves/images/OrangeGlitterDice.jpg" width="300" height="300" alt="OrangeGlitterDice">
+		<img src="../images/OrangeGlitterDice.jpg" width="300" height="300" alt="OrangeGlitterDice">
 		<div class="item__desc">
 			<h5>Glitter Orange Dice 1450$</h5>
 			<input type="button" value="Comprar">
 		</div>
 	</section>
 	<section class="item5">
-		<div class="mid_page_logo"><img src="/Entregas/DexSaves/images/DnD-Symbol.png" alt="DnD-Symbol"></div>
+		<div class="mid_page_logo"><img src="../images/DnD-Symbol.png" alt="DnD-Symbol"></div>
 	</section>
 	<section class="item6">
-		<img src="/Entregas/DexSaves/images/SetMetallicDice.png" width="300" height="300" alt="SetMetalGastado">
+		<img src="../images/SetMetallicDice.png" width="300" height="300" alt="SetMetalGastado">
 		<div class="item__desc">
 			<h5>Set Metal Gastado 6000$</h5>
 			<input type="button" value="Comprar">
 		</div>
 	</section>
 	<section class="item7">
-		<img src="/Entregas/DexSaves/images/SetMetallicDiceBlackBlue.jpg" width="300" height="300" alt="SetMetalAzulNegro">
+		<img src="../images/SetMetallicDiceBlackBlue.jpg" width="300" height="300" alt="SetMetalAzulNegro">
 		<div class="item__desc">
 			<h5>Set Metalico Azul&Negro 7500$</h5>
 			<input type="button" value="Comprar">
 	</section>
 	<section class="item8">
-		<img src="/Entregas/DexSaves/images/MetallicAngelicDice.jpg" width="300" height="300" alt="SetAngelicDice">
+		<img src="../images/MetallicAngelicDice.jpg" width="300" height="300" alt="SetAngelicDice">
 		<div class="item__desc">
 			<h5>Set Angelic Dice 9000$</h5>
 			<input type="button" value="Comprar">
 	</section>
 	<section class="item9">
-		<img src="/Entregas/DexSaves/images/CopperDice.jpg" width="300" height="300" alt="SetCopperDice">
+		<img src="../images/CopperDice.jpg" width="300" height="300" alt="SetCopperDice">
 		<div class="item__desc">
 			<h5>Set Copper Dice 6000$</h5>
 			<input type="button" value="Comprar">
@@ -132,13 +132,13 @@
 	</section>
 	<footer class="new_footer">
 		<div><a style="text-decoration: none;" href="https://es-la.facebook.com/" target="_blank"><img
-					src="/Entregas/DexSaves/images/FacebookWhite.jpg" width="30px" height="30px" alt="Nuestro Facebook">
+					src="../images/FacebookWhite.jpg" width="30px" height="30px" alt="Nuestro Facebook">
 				<a style="text-decoration: none;" href="https://www.instagram.com/" target="_blank"><img
-						src="/Entregas/DexSaves/images/InstagramWhite.png" alt="Nuestro Instagram" width="30px" height="30px">
+						src="../images/InstagramWhite.png" alt="Nuestro Instagram" width="30px" height="30px">
 					<a style="text-decoration: none;" href="https://www.twitter.com/" target="_blank"><img
-							src="/Entregas/DexSaves/images/TwitterWhite.png" alt="Nuestro Twitter" width="30px" height="30px">
+							src="../images/TwitterWhite.png" alt="Nuestro Twitter" width="30px" height="30px">
 						<a style="text-decoration: none;" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
-							target="_blank"><img src="/Entregas/DexSaves/images/YoutubeWhite.png" alt="El Mejor Video de la Historia" width="31px"
+							target="_blank"><img src="../images/YoutubeWhite.png" alt="El Mejor Video de la Historia" width="31px"
 								height="31px">
 						</a></div>
 		Copyright Victor Blanco
