--- a/pag/Gracias.html
+++ b/pag/Gracias.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dex Saves</title>
     <link rel="shortcut icon" href="images/D20Logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="/Entregas/DexSaves/css/gracias.css">
+    <link rel="stylesheet" href="../css/gracias.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Raleway:wght@100&display=swap"
@@ -18,7 +18,7 @@
 <body>
     <!-- Layout con Grid -->
     <header>
-		<img src="/Entregas/DexSaves/images/D20Logo.png" alt="DexSavesLogo">
+		<img src="../images/D20Logo.png" alt="DexSavesLogo">
 		<div class="header__title__container">
 			<h1 class="header__title">Dex Saving Throws</h1>
 			<h3 class="header__subtitle">Todo en Juegos de Rol</h3>
@@ -26,13 +26,13 @@
 	</header>
     <main class="main__gracias">
         <div>
-            <img class="main__dice" src="/Entregas/DexSaves/images/Natural20.png" alt="Natural 20!">
+            <img class="main__dice" src="../images/Natural20.png" alt="Natural 20!">
         </div>
         <div class="main__text">
             <h1>¡Gracias por suscribirte a nuestro newsletter!</h1>
             <h3>Ahora serás de los primeros en entérarte cuando hayan más productos de tu preferencia.</h3>
         
-            <a href="/Entregas/DexSaves/index.html"><input type="button" value="Volver a Home">
+            <a href="../index.html"><input type="button" value="Volver a Home">
         </div>
 
     </main>
