--- a/pag/Manuales.html
+++ b/pag/Manuales.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dex Saves</title>
     <link rel="shortcut icon" href="images/D20Logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="/Entregas/DexSaves/css/shop.css">
+    <link rel="stylesheet" href="../css/shop.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Raleway:wght@100&display=swap"
@@ -18,7 +18,7 @@
 <body>
     <!-- Layout con Grid -->
     <header>
-        <img src="/Entregas/DexSaves/images/D20Logo.png" alt="DexSavesLogo">
+        <img src="../images/D20Logo.png" alt="DexSavesLogo">
         <div class="header__title__container">
             <h1 class="header__title">Dex Saving Throws</h1>
             <h3 class="header__subtitle">Todo en Juegos de Rol</h3>
@@ -27,21 +27,21 @@
     <nav class="nav__grid">
 
         <ul class="list">
-            <li><a href="/Entregas/DexSaves/index.html">Home</a> </li>
-            <li><a href="/Entregas/DexSaves/pag/Manuales.html">Manuales</a>
+            <li><a href="../index.html">Home</a> </li>
+            <li><a href="Manuales.html">Manuales</a>
                 <ul>
                     <li><a href=""> Dungeons and Dragons</a></li>
                     <li><a href=""> Call of Cthulhu</a></li>
                 </ul>
             </li>
-            <li><a href="/Entregas/DexSaves/pag/Dados.html">Dados</a>
+            <li><a href="Dados.html">Dados</a>
                 <ul>
                     <li><a href="#">Metálicos</a></li>
                     <li><a href="#">Plásticos</a></li>
                     <li><a href="#">Especiales</a></li>
                 </ul>
             </li>
-            <li><a href="/Entregas/DexSaves/pag/Minis.html">Miniaturas</a>
+            <li><a href="Minis.html">Miniaturas</a>
                 <ul>
                     <li>
                     <li><a href=""> Pintadas</a></li>
@@ -49,7 +49,7 @@
             <li><a href=""> Sin Pintar</a></li>
         </ul>
         </li>
-        <li><a href="/Entregas/DexSaves/pag/Contacto.html">Contáctanos</a></li>
+        <li><a href="Contacto.html">Contáctanos</a></li>
         </ul>
 
 </nav>
@@ -70,21 +70,21 @@
         </div>
     </section>
     <section class="item1">
-        <img src="/Entregas/DexSaves/images/StarterSetDnD2" width="300" height="300" alt="DnD Starter Set">
+        <img src="../images/StarterSetDnD2" width="300" height="300" alt="DnD Starter Set">
         <div class="item__desc">
             <h5>Starter Set Dungeons and Dragons 7500$</h5>
             <input type="button" value="Comprar">
         </div>
     </section>
     <section class="item2">
-        <img src="/Entregas/DexSaves/images/PlayersHandbook.jpg" width="300" height="300" alt="Manual del Jugador">
+        <img src="../images/PlayersHandbook.jpg" width="300" height="300" alt="Manual del Jugador">
         <div class="item__desc">
             <h5>Manual del Jugador 5E 14000$</h5>
             <input type="button" value="Comprar">
         </div>
     </section>
     <section class="item3">
-        <img src="/Entregas/DexSaves/images/DMGuide.jpg" width="300" height="300" alt="DMGuide">
+        <img src="../images/DMGuide.jpg" width="300" height="300" alt="DMGuide">
         <div class="item__desc">
             <h5>Guía del Dungeon Master 14000$</h5>
             <input type="button" value="Comprar">
@@ -92,36 +92,36 @@
     </section>
     </section>
     <section class="item4">
-        <img src="/Entregas/DexSaves/images/ExplorersGuideToWildemount.jpg" width="300" height="300" alt="ExplorersGuideToWildemount">
+        <img src="../images/ExplorersGuideToWildemount.jpg" width="300" height="300" alt="ExplorersGuideToWildemount">
         <div class="item__desc">
             <h5>Guía de Wildemount 13000$</h5>
             <input type="button" value="Comprar">
         </div>
     </section>
     <section class="item5">
-        <div class="mid_page_logo"><img src="/Entregas/DexSaves/images/DnD-Symbol.png" alt="DnD-Symbol"></div>
+        <div class="mid_page_logo"><img src="../images/DnD-Symbol.png" alt="DnD-Symbol"></div>
     </section>
     <section class="item6">
-        <img src="/Entregas/DexSaves/images/Keeper Rulebook.jpg" width="300" height="300" alt="KeeperRulebook">
+        <img src="../images/Keeper Rulebook.jpg" width="300" height="300" alt="KeeperRulebook">
         <div class="item__desc">
             <h5>Manual del Keeper 8500$</h5>
             <input type="button" value="Comprar">
         </div>
     </section>
     <section class="item7">
-        <img src="/Entregas/DexSaves/images/StarterSetCoC.jpg" width="300" height="300" alt="StarterSetCoC">
+        <img src="../images/StarterSetCoC.jpg" width="300" height="300" alt="StarterSetCoC">
         <div class="item__desc">
             <h5>Starter Set CoC 6000$</h5>
             <input type="button" value="Comprar">
     </section>
     <section class="item8">
-        <img src="/Entregas/DexSaves/images/MentirasEternas.jpg" width="300" height="300" alt="MentirasEternas">
+        <img src="../images/MentirasEternas.jpg" width="300" height="300" alt="MentirasEternas">
         <div class="item__desc">
             <h5>Mentiras Eteras 8500$</h5>
             <input type="button" value="Comprar">
     </section>
     <section class="item9">
-        <img src="/Entregas/DexSaves/images/GuiaDelInvestigador.jpg" width="300" height="300" alt="GuiaDelInvestigador">
+        <img src="../images/GuiaDelInvestigador.jpg" width="300" height="300" alt="GuiaDelInvestigador">
         <div class="item__desc">
             <h5>Guía del Investigador 6000$</h5>
             <input type="button" value="Comprar">
@@ -133,13 +133,13 @@
     </section>
     <footer class="new_footer">
         <div><a style="text-decoration: none;" href="https://es-la.facebook.com/" target="_blank"><img
-                    src="/Entregas/DexSaves/images/FacebookWhite.jpg" width="30px" height="30px" alt="Nuestro Facebook">
+                    src="../images/FacebookWhite.jpg" width="30px" height="30px" alt="Nuestro Facebook">
                 <a style="text-decoration: none;" href="https://www.instagram.com/" target="_blank"><img
-                        src="/Entregas/DexSaves/images/InstagramWhite.png" alt="Nuestro Instagram" width="30px" height="30px">
+                        src="../images/InstagramWhite.png" alt="Nuestro Instagram" width="30px" height="30px">
                     <a style="text-decoration: none;" href="https://www.twitter.com/" target="_blank"><img
-                            src="/Entregas/DexSaves/images/TwitterWhite.png" alt="Nuestro Twitter" width="30px" height="30px">
+                            src="../images/TwitterWhite.png" alt="Nuestro Twitter" width="30px" height="30px">
                         <a style="text-decoration: none;" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
-                            target="_blank"><img src="/Entregas/DexSaves/images/YoutubeWhite.png" alt="El Mejor Video de la Historia"
+                            target="_blank"><img src="../images/YoutubeWhite.png" alt="El Mejor Video de la Historia"
                                 width="31px" height="31px">
                         </a></div>
         Copyright Victor Blanco
