Se arreglaron dos links en la pagina index

--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
 
 			<ul class="list">
 				<li><a href="index.html">Home</a> </li>
-				<li><a href="./pag/Manuales.html">Manuales</a>
+				<li><a href="pag/Manuales.html">Manuales</a>
 					<ul>
 						<li><a href=""> Dungeons and Dragons</a></li>
 						<li><a href=""> Call of Cthulhu</a></li>
 					</ul>
 				</li>
-				<li><a href="./pag/Dados.html">Dados</a>
+				<li><a href="pag/Dados.html">Dados</a>
 					<ul>
 						<li><a href="#">Metálicos</a></li>
 						<li><a href="#">Plásticos</a></li>
 						<li><a href="#">Especiales</a></li>
 					</ul>
 				</li>
-				<li><a href="./pag/Minis.html">Miniaturas</a>
+				<li><a href="pag/Minis.html">Miniaturas</a>
 					<ul>
 						<li>
 						<li><a href=""> Pintadas</a></li>
@@ -50,7 +50,7 @@
 				<li><a href=""> Sin Pintar</a></li>
 			</ul>
 			</li>
-			<li><a href="./pag/Contacto.html">Contáctanos</a></li>
+			<li><a href="pag/Contacto.html">Contáctanos</a></li>
 			</ul>
 
 	</nav>
@@ -66,7 +66,7 @@
 		</div>
 	</main>
 	<section id="imagen1">
-		<a href="Manuales.html"><img src="images/DnD-Books.jpg" width="100%" height="100%"
+		<a href="pag/Manuales.html"><img src="images/DnD-Books.jpg" width="100%" height="100%"
 				alt="Imagen de Libros de Dungeons and Dragons"></a>
 	</section>
 	<section id="video">
@@ -74,7 +74,7 @@
 			frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 			allowfullscreen></iframe></section>
 	<section id="imagen2">
-		<a href="Dados.html"><img src="images/Dice.jpg" width="100%" height="100%"
+		<a href="pag/Dados.html"><img src="images/Dice.jpg" width="100%" height="100%"
 				alt="Imagen del Starter Set de Call of Cthulhu"></a>
 	</section>
 	<footer class="new_footer">
