Se cambió la navbar, agregaron transformaciones, se modificaron los css y arreglaron los htlm

--- a/index.html
+++ b/index.html
@@ -26,33 +26,11 @@
 
 	</header>
 	<nav class="nav__grid">
-
-			<ul class="list">
-				<li><a href="index.html">Home</a> </li>
-				<li><a href="pag/Manuales.html">Manuales</a>
-					<ul>
-						<li><a href=""> Dungeons and Dragons</a></li>
-						<li><a href=""> Call of Cthulhu</a></li>
-					</ul>
-				</li>
-				<li><a href="pag/Dados.html">Dados</a>
-					<ul>
-						<li><a href="#">Metálicos</a></li>
-						<li><a href="#">Plásticos</a></li>
-						<li><a href="#">Especiales</a></li>
-					</ul>
-				</li>
-				<li><a href="pag/Minis.html">Miniaturas</a>
-					<ul>
-						<li>
-						<li><a href=""> Pintadas</a></li>
-				</li>
-				<li><a href=""> Sin Pintar</a></li>
-			</ul>
-			</li>
-			<li><a href="pag/Contacto.html">Contáctanos</a></li>
-			</ul>
-
+		<div class="nav__item"><a href="index.html">Home</a></div>
+		<div class="nav__item"><a href="pag/Manuales.html">Manuales</a></div>
+		<div class="nav__item"><a href="pag/Dados.html">Dados</a></div>
+		<div class="nav__item"><a href="pag/Minis.html">Miniaturas</a></div>
+		<div class="nav__item"><a href="pag/Contacto.html">Contáctanos</a></div>
 	</nav>
 	<main class="index__main">
 		<div class="main">
