--- a/pag/Contacto.html
+++ b/pag/Contacto.html
@@ -25,34 +25,12 @@
 		</div>
 	</header>
 	<nav class="nav__grid">
-
-		<ul class="list">
-			<li><a href="../index.html">Home</a> </li>
-			<li><a href="../pag/Manuales.html">Manuales</a>
-				<ul>
-					<li><a href=""> Dungeons and Dragons</a></li>
-					<li><a href=""> Call of Cthulhu</a></li>
-				</ul>
-			</li>
-			<li><a href="../pag/Dados.html">Dados</a>
-				<ul>
-					<li><a href="#">Metálicos</a></li>
-					<li><a href="#">Plásticos</a></li>
-					<li><a href="#">Especiales</a></li>
-				</ul>
-			</li>
-			<li><a href="../pag/Minis.html">Miniaturas</a>
-				<ul>
-					<li>
-					<li><a href=""> Pintadas</a></li>
-			</li>
-			<li><a href=""> Sin Pintar</a></li>
-		</ul>
-		</li>
-		<li><a href="../pag/Contacto.html">Contáctanos</a></li>
-		</ul>
-
-</nav>
+        <div class="nav__item"><a href="../index.html">Home</a></div>
+        <div class="nav__item"><a href="Manuales.html">Manuales</a></div>
+        <div class="nav__item"><a href="Dados.html">Dados</a></div>
+        <div class="nav__item"><a href="Minis.html">Miniaturas</a></div>
+        <div class="nav__item"><a href="Contacto.html">Contáctanos</a></div>
+    </nav>
 	<main class="main">
 		<div class="socials">
 			<div>
@@ -79,7 +57,7 @@
 		<div class="newsletter">
 			<form action="Gracias.html">
 				<fieldset class="fieldset">
-					<legend style="font-size: x-large;">Newsletter</legend>
+					
 					<p>Suscríbete a nuestro newsletter y entérate de cuando tengamos más productos que sean de
 						tu interés.</p>
 					Nombre y Apellido: <br>
@@ -116,20 +94,5 @@
 		Copyright Victor Blanco
 	</footer>
 </body>
-
-<!-- <ul>
-	<li><a class="contacto__list" href="https://es-la.facebook.com/" target="_blank"><img
-				src="images/FacebookWhite.jpg" width="30px" height="30px" alt="Nuestro Facebook">
-			Facebook </li>
-	<li><a class="contacto__list" href="https://www.instagram.com/" target="_blank"><img
-				src="images/InstagramWhite.png" alt="Nuestro Instagram" width="30px" height="30px">
-			Instagram </li>
-	<li><a class="contacto__list" href="https://www.twitter.com/" target="_blank"><img
-				src="images/TwitterWhite.png" alt="Nuestro Twitter" width="30px" height="30px">
-			Twitter </li>
-	<li><a class="contacto__list" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img
-				src="images/YoutubeWhite.png" alt="El Mejor Video de la Historia" width="31px"
-				height="31px"> YouTube
-</ul> -->
 
 </html>
