--- a/pag/Dados.html
+++ b/pag/Dados.html
@@ -25,34 +25,12 @@
 		</div>
 	</header>
 	<nav class="nav__grid">
-
-		<ul class="list">
-			<li><a href="../index.html">Home</a> </li>
-			<li><a href="Manuales.html">Manuales</a>
-				<ul>
-					<li><a href=""> Dungeons and Dragons</a></li>
-					<li><a href=""> Call of Cthulhu</a></li>
-				</ul>
-			</li>
-			<li><a href="Dados.html">Dados</a>
-				<ul>
-					<li><a href="#">Metálicos</a></li>
-					<li><a href="#">Plásticos</a></li>
-					<li><a href="#">Especiales</a></li>
-				</ul>
-			</li>
-			<li><a href="Minis.html">Miniaturas</a>
-				<ul>
-					<li>
-					<li><a href=""> Pintadas</a></li>
-			</li>
-			<li><a href=""> Sin Pintar</a></li>
-		</ul>
-		</li>
-		<li><a href="Contacto.html">Contáctanos</a></li>
-		</ul>
-
-</nav>
+        <div class="nav__item"><a href="../index.html">Home</a></div>
+        <div class="nav__item"><a href="Manuales.html">Manuales</a></div>
+        <div class="nav__item"><a href="Dados.html">Dados</a></div>
+        <div class="nav__item"><a href="Minis.html">Miniaturas</a></div>
+        <div class="nav__item"><a href="Contacto.html">Contáctanos</a></div>
+    </nav>
 	<section class="title">
 		<div class="titulo__pagina">
 			<h2>Dados</h2>
@@ -69,21 +47,21 @@
 		</div>
 	</section>
 	<section class="item1">
-		<img src="../images/MetallicDice.jpg" width="300" height="300" alt="D20 Metallic Set">
+		<img class="shop__images" src="../images/MetallicDice.jpg" alt="D20 Metallic Set">
 		<div class="item__desc">
 			<h5>Set D20 Metalicos 3300$</h5>
 			<input type="button" value="Comprar">
 		</div>
 	</section>
 	<section class="item2">
-		<img src="../images/GreenMarmolDice.jpg" width="300" height="300" alt="SetGreenMarmol">
+		<img class="shop__images" src="../images/GreenMarmolDice.jpg" alt="SetGreenMarmol">
 		<div class="item__desc">
 			<h5>Green Marmol Dice 1300$</h5>
 			<input type="button" value="Comprar">
 		</div>
 	</section>
 	<section class="item3">
-		<img src="../images/PurpleMarmolDice.jpg" width="300" height="300" alt="SetPurpleMarmol">
+		<img class="shop__images" src="../images/PurpleMarmolDice.jpg" alt="SetPurpleMarmol">
 		<div class="item__desc">
 			<h5>Purple Marmol Dice 1300$</h5>
 			<input type="button" value="Comprar">
@@ -91,7 +69,7 @@
 	</section>
 	</section>
 	<section class="item4">
-		<img src="../images/OrangeGlitterDice.jpg" width="300" height="300" alt="OrangeGlitterDice">
+		<img class="shop__images" src="../images/OrangeGlitterDice.jpg" alt="OrangeGlitterDice">
 		<div class="item__desc">
 			<h5>Glitter Orange Dice 1450$</h5>
 			<input type="button" value="Comprar">
@@ -101,26 +79,26 @@
 		<div class="mid_page_logo"><img src="../images/DnD-Symbol.png" alt="DnD-Symbol"></div>
 	</section>
 	<section class="item6">
-		<img src="../images/SetMetallicDice.png" width="300" height="300" alt="SetMetalGastado">
+		<img class="shop__images" src="../images/SetMetallicDice.png" alt="SetMetalGastado">
 		<div class="item__desc">
 			<h5>Set Metal Gastado 6000$</h5>
 			<input type="button" value="Comprar">
 		</div>
 	</section>
 	<section class="item7">
-		<img src="../images/SetMetallicDiceBlackBlue.jpg" width="300" height="300" alt="SetMetalAzulNegro">
+		<img class="shop__images" src="../images/SetMetallicDiceBlackBlue.jpg" alt="SetMetalAzulNegro">
 		<div class="item__desc">
 			<h5>Set Metalico Azul&Negro 7500$</h5>
 			<input type="button" value="Comprar">
 	</section>
 	<section class="item8">
-		<img src="../images/MetallicAngelicDice.jpg" width="300" height="300" alt="SetAngelicDice">
+		<img class="shop__images" src="../images/MetallicAngelicDice.jpg" alt="SetAngelicDice">
 		<div class="item__desc">
 			<h5>Set Angelic Dice 9000$</h5>
 			<input type="button" value="Comprar">
 	</section>
 	<section class="item9">
-		<img src="../images/CopperDice.jpg" width="300" height="300" alt="SetCopperDice">
+		<img class="shop__images" src="../images/CopperDice.jpg" alt="SetCopperDice">
 		<div class="item__desc">
 			<h5>Set Copper Dice 6000$</h5>
 			<input type="button" value="Comprar">
