--- a/pag/Minis.html
+++ b/pag/Minis.html
@@ -25,32 +25,12 @@
 		</div>
 	</header>
 	<nav class="nav__grid">
-		<ul class="list">
-			<li><a href="../index.html">Home</a> </li>
-			<li><a href="Manuales.html">Manuales</a>
-				<ul>
-					<li><a href=""> Dungeons and Dragons</a></li>
-					<li><a href=""> Call of Cthulhu</a></li>
-				</ul>
-			</li>
-			<li><a href="Dados.html">Dados</a>
-				<ul>
-					<li><a href="#">Metálicos</a></li>
-					<li><a href="#">Plásticos</a></li>
-					<li><a href="#">Especiales</a></li>
-				</ul>
-			</li>
-			<li><a href="Minis.html">Miniaturas</a>
-				<ul>
-					<li>
-					<li><a href=""> Pintadas</a></li>
-			</li>
-			<li><a href=""> Sin Pintar</a></li>
-		</ul>
-		</li>
-		<li><a href="Contacto.html">Contáctanos</a></li>
-		</ul>
-	</nav>
+        <div class="nav__item"><a href="../index.html">Home</a></div>
+        <div class="nav__item"><a href="Manuales.html">Manuales</a></div>
+        <div class="nav__item"><a href="Dados.html">Dados</a></div>
+        <div class="nav__item"><a href="Minis.html">Miniaturas</a></div>
+        <div class="nav__item"><a href="Contacto.html">Contáctanos</a></div>
+    </nav>
 	<section class="title">
 		<div class="titulo__pagina">
 			<h2>Miniaturas</h2>
@@ -99,7 +79,7 @@
 		<div class="mid_page_logo"><img src="../images/DnD-Symbol.png" alt="DnD-Symbol"></div>
 	</section>
 	<section class="item6">
-		<img src="../images/CopperDragonUnpaintedMini.jpg" width="275" height="275" alt="Copper Dragon">
+		<img src="../images/CopperDragonUnpaintedMini.jpg" width="200" height="200" alt="Copper Dragon">
 		<div class="item__desc">
 			<h5>Dragón de Cobre Jóven 900$</h5>
 			<input type="button" value="Comprar">
@@ -112,13 +92,13 @@
 			<input type="button" value="Comprar">
 	</section>
 	<section class="item8">
-		<img src="../images/BeholderUnpaintedMini.jpg" width="250" height="250" alt="Beholder">
+		<img src="../images/BeholderUnpaintedMini.jpg" width="200" height="200" alt="Beholder">
 		<div class="item__desc">
 			<h5>Miniatura Beholder Sin Pintar 1300$</h5>
 			<input type="button" value="Comprar">
 	</section>
 	<section class="item9">
-		<img src="../images/BeholderPaintedMini.jpg" width="250" height="250" alt="Red Dragon">
+		<img src="../images/BeholderPaintedMini.jpg" width="200" height="200" alt="Red Dragon">
 		<div class="item__desc">
 			<h5>Miniatura Beholder Pintado 2000$</h5>
 			<input type="button" value="Comprar">
