--- a/pag/Manuales.html
+++ b/pag/Manuales.html
@@ -25,34 +25,11 @@
         </div>
     </header>
     <nav class="nav__grid">
-
-        <ul class="list">
-            <li><a href="../index.html">Home</a> </li>
-            <li><a href="Manuales.html">Manuales</a>
-                <ul>
-                    <li><a href=""> Dungeons and Dragons</a></li>
-                    <li><a href=""> Call of Cthulhu</a></li>
-                </ul>
-            </li>
-            <li><a href="Dados.html">Dados</a>
-                <ul>
-                    <li><a href="#">Metálicos</a></li>
-                    <li><a href="#">Plásticos</a></li>
-                    <li><a href="#">Especiales</a></li>
-                </ul>
-            </li>
-            <li><a href="Minis.html">Miniaturas</a>
-                <ul>
-                    <li>
-                    <li><a href=""> Pintadas</a></li>
-            </li>
-            <li><a href=""> Sin Pintar</a></li>
-        </ul>
-        </li>
-        <li><a href="Contacto.html">Contáctanos</a></li>
-        </ul>
-
-</nav>
+        <div class="nav__item"><a href="../index.html">Home</a></div>
+        <div class="nav__item"><a href="Manuales.html">Manuales</a></div>
+        <div class="nav__item"><a href="Dados.html">Dados</a></div>
+        <div class="nav__item"><a href="Minis.html">Miniaturas</a></div>
+        <div class="nav__item"><a href="Contacto.html">Contáctanos</a></div>
     </nav>
     <section class="title">
         <div class="titulo__pagina">
@@ -70,21 +47,21 @@
         </div>
     </section>
     <section class="item1">
-        <img src="../images/StarterSetDnD2" width="300" height="300" alt="DnD Starter Set">
+        <img class="shop__images" src="../images/StarterSetDnD2" alt="DnD Starter Set">
         <div class="item__desc">
             <h5>Starter Set Dungeons and Dragons 7500$</h5>
             <input type="button" value="Comprar">
         </div>
     </section>
     <section class="item2">
-        <img src="../images/PlayersHandbook.jpg" width="300" height="300" alt="Manual del Jugador">
+        <img class="shop__images" src="../images/PlayersHandbook.jpg" alt="Manual del Jugador">
         <div class="item__desc">
             <h5>Manual del Jugador 5E 14000$</h5>
             <input type="button" value="Comprar">
         </div>
     </section>
     <section class="item3">
-        <img src="../images/DMGuide.jpg" width="300" height="300" alt="DMGuide">
+        <img class="shop__images" src="../images/DMGuide.jpg" alt="DMGuide">
         <div class="item__desc">
             <h5>Guía del Dungeon Master 14000$</h5>
             <input type="button" value="Comprar">
@@ -92,7 +69,7 @@
     </section>
     </section>
     <section class="item4">
-        <img src="../images/ExplorersGuideToWildemount.jpg" width="300" height="300" alt="ExplorersGuideToWildemount">
+        <img class="shop__images" src="../images/ExplorersGuideToWildemount.jpg" alt="ExplorersGuideToWildemount">
         <div class="item__desc">
             <h5>Guía de Wildemount 13000$</h5>
             <input type="button" value="Comprar">
@@ -102,26 +79,26 @@
         <div class="mid_page_logo"><img src="../images/DnD-Symbol.png" alt="DnD-Symbol"></div>
     </section>
     <section class="item6">
-        <img src="../images/Keeper Rulebook.jpg" width="300" height="300" alt="KeeperRulebook">
+        <img class="shop__images" src="../images/Keeper Rulebook.jpg" alt="KeeperRulebook">
         <div class="item__desc">
             <h5>Manual del Keeper 8500$</h5>
             <input type="button" value="Comprar">
         </div>
     </section>
     <section class="item7">
-        <img src="../images/StarterSetCoC.jpg" width="300" height="300" alt="StarterSetCoC">
+        <img class="shop__images" src="../images/StarterSetCoC.jpg" alt="StarterSetCoC">
         <div class="item__desc">
             <h5>Starter Set CoC 6000$</h5>
             <input type="button" value="Comprar">
     </section>
     <section class="item8">
-        <img src="../images/MentirasEternas.jpg" width="300" height="300" alt="MentirasEternas">
+        <img class="shop__images" src="../images/MentirasEternas.jpg" alt="MentirasEternas">
         <div class="item__desc">
             <h5>Mentiras Eteras 8500$</h5>
             <input type="button" value="Comprar">
     </section>
     <section class="item9">
-        <img src="../images/GuiaDelInvestigador.jpg" width="300" height="300" alt="GuiaDelInvestigador">
+        <img class="shop__images" src="../images/GuiaDelInvestigador.jpg" alt="GuiaDelInvestigador">
         <div class="item__desc">
             <h5>Guía del Investigador 6000$</h5>
             <input type="button" value="Comprar">
