se volvió a agregar el titulo del Newsletter

--- a/pag/Contacto.html
+++ b/pag/Contacto.html
@@ -57,7 +57,7 @@
 		<div class="newsletter">
 			<form action="Gracias.html">
 				<fieldset class="fieldset">
-					
+					<legend style="font-size: x-large;">Newsletter</legend>
 					<p>Suscríbete a nuestro newsletter y entérate de cuando tengamos más productos que sean de
 						tu interés.</p>
 					Nombre y Apellido: <br>
