se arreglaron los footers e iconos de las otras páginas

--- a/pag/Contacto.html
+++ b/pag/Contacto.html
@@ -79,18 +79,15 @@
 		</div>
 	</main>
 	<footer class="new_footer">
-		<div>
-			<a style="text-decoration: none;" href="https://es-la.facebook.com/" target="_blank"><img
-					src="../images/FacebookWhite.jpg" width="30px" height="30px" alt="Nuestro Facebook">
-				<a style="text-decoration: none;" href="https://www.instagram.com/" target="_blank"><img
-						src="../images/InstagramWhite.png" alt="Nuestro Instagram" width="30px" height="30px">
-					<a style="text-decoration: none;" href="https://www.twitter.com/" target="_blank"><img
-							src="../images/TwitterWhite.png" alt="Nuestro Twitter" width="30px" height="30px">
-						<a style="text-decoration: none;" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
-							target="_blank"><img src="../images/YoutubeWhite.png" alt="El Mejor Video de la Historia"
-								width="31px" height="31px">
-						</a>
-		</div>
+		<div><a class="footer__icon" style="text-decoration: none;" href="https://es-la.facebook.com/" target="_blank"><img
+			src="../images/FacebookWhite.jpg" width="30px" height="30px" alt="Nuestro Facebook">
+		<a class="footer__icon" style="text-decoration: none;" href="https://www.instagram.com/" target="_blank"><img
+				src="../images/InstagramWhite.png" alt="Nuestro Instagram" width="30px" height="30px">
+			<a class="footer__icon" style="text-decoration: none;" href="https://www.twitter.com/" target="_blank"><img
+					src="../images/TwitterWhite.png" alt="Nuestro Twitter" width="30px" height="30px">
+				<a class="footer__icon" style="text-decoration: none;" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img
+						src="../images/YoutubeWhite.png" alt="El Mejor Video de la Historia" width="31px" height="31px">
+				</a></div>
 		Copyright Victor Blanco
 	</footer>
 </body>
